# tsetmc-scraper

./: LICENSE  README.md  pyproject.toml
tsetmc_scraper/: utils.py
tsetmc_scraper/day_details/: _core.py  day_details.py  shareholder.py
tsetmc_scraper/group/: _core.py  group.py
tsetmc_scraper/market_map/: _core.py  map.py
tsetmc_scraper/market_watch/: _core.py  watch.py
tsetmc_scraper/symbol/: _core.py  group.py  info.py  option.py  price.py  shareholder.py  symbol.py  trade.py  traders_type.py
